--- a/docs/references.bib
+++ b/docs/references.bib
@@ -515,6 +515,25 @@
                   continuum hypothesis, Boolean-valued models, Lean}
 }
 
+@book {fremlin_vol2,
+    AUTHOR = {Fremlin, David H.},
+     TITLE = {Measure theory. {V}ol. 2},
+      NOTE = {Broad foundations,
+              2010 edition},
+ PUBLISHER = {Torres Fremlin, Colchester},
+      YEAR = {2010},
+      ISBN = {0-9538129-2-8},
+}
+
+@book {fremlin_vol4,
+    AUTHOR = {Fremlin, David H.},
+     TITLE = {Measure theory. {V}ol. 4},
+      NOTE = {Topological Measure Spaces},
+ PUBLISHER = {Torres Fremlin, Colchester},
+      YEAR = {2003},
+}
+
+
 @Book{            fuchs1963,
   author        = {Fuchs, L.},
   title         = {Partially ordered algebraic systems},
@@ -874,6 +893,22 @@
   mrreviewer    = {Kenneth A. Ribet},
   doi           = {10.1515/9781400881710},
   url           = {https://doi.org/10.1515/9781400881710}
+}
+
+@Book {kechris1995,
+    AUTHOR = {Kechris, Alexander S.},
+     TITLE = {Classical descriptive set theory},
+    SERIES = {Graduate Texts in Mathematics},
+    VOLUME = {156},
+ PUBLISHER = {Springer-Verlag, New York},
+      YEAR = {1995},
+     PAGES = {xviii+402},
+      ISBN = {0-387-94374-9},
+   MRCLASS = {03E15 (03-01 03-02 04A15 28A05 54H05 90D44)},
+  MRNUMBER = {1321597},
+MRREVIEWER = {Jakub Jasi\'{n}ski},
+       DOI = {10.1007/978-1-4612-4190-4},
+       URL = {https://doi.org/10.1007/978-1-4612-4190-4},
 }
 
 @Article{         kleiman1979,
