Pretty much done, I'd say

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -270,6 +270,18 @@
   url           = {https://doi.org/10.1007/978-3-642-61715-7},
 }
 
+@Article{         buchholz1986,
+  title         = {A new system of proof-theoretic ordinal functions},
+  journal       = {Annals of Pure and Applied Logic},
+  volume        = {32},
+  pages         = {195-207},
+  year          = {1986},
+  issn          = {0168-0072},
+  doi           = {https://doi.org/10.1016/0168-0072(86)90052-7},
+  url           = {https://www.sciencedirect.com/science/article/pii/0168007286900527},
+  author        = {W. Buchholz}
+}
+
 @Article{         cadiou1972,
   title         = {Recursive definitions of partial functions and their
                   computations},
