proof modulo factorization in mv_polynomial

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1289,6 +1289,22 @@ MRREVIEWER = {Jakub Jasi\'{n}ski},
   primaryclass  = {math.DS}
 }
 
+@Book{            reid88,
+  Author        = {Miles {Reid}},
+  Title         = {{Undergraduate algebraic geometry}},
+  FJournal      = {{London Mathematical Society Student Texts}},
+  Journal       = {{Lond. Math. Soc. Stud. Texts}},
+  ISSN          = {0963-1631},
+  Volume        = {12},
+  ISBN          = {0-521-35662-8; 0-521-35559-1},
+  Pages         = {viii + 129},
+  Year          = {1988},
+  Publisher     = {Cambridge (UK) etc.: Cambridge University Press},
+  Language      = {English},
+  MSC2010       = {14-01 14-02 14Hxx 14A10 14B05 14Jxx},
+  Zbl           = {0701.14001}
+}
+
 @Book{            riehl2017,
   author        = {Riehl, Emily},
   title         = {Category theory in context},
