feat(order/concept): Concept lattices (#12286)
Define `concept`, the type of concepts of a relation, and prove it forms a complete lattice.

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -392,6 +392,21 @@
   mrnumber      = {1803095}
 }
 
+@Book{            davey_priestley,
+  author        = {Davey, B. A. and Priestley, H. A.},
+  title         = {Introduction to lattices and order},
+  edition       = {Second},
+  publisher     = {Cambridge University Press, New York},
+  year          = {2002},
+  pages         = {xii+298},
+  isbn          = {0-521-78451-4},
+  MRCLASS       = {06-01 (68Q55)},
+  mrclass       = {1902334},
+  mrreviewer    = {T. S. Blyth},
+  doi           = {10.1017/CBO9780511809088},
+  url           = {https://doi.org/10.1017/CBO9780511809088},
+}
+
 @InProceedings{   deligne_formulaire,
   author        = {Deligne, P.},
   title         = {Courbes elliptiques: formulaire d'apr\`es {J}. {T}ate},
