rename to mrnumber

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -400,7 +400,8 @@
   year          = {2002},
   pages         = {xii+298},
   isbn          = {0-521-78451-4},
-  mrclass       = {1902334},
+  mrclass       = {06-01 (68Q55)},
+  mrnumber      = {1902334},
   mrreviewer    = {T. S. Blyth},
   doi           = {10.1017/CBO9780511809088},
   url           = {https://doi.org/10.1017/CBO9780511809088},
