--- a/docs/references.bib
+++ b/docs/references.bib
@@ -404,6 +404,21 @@
   doi           = {10.1007/978-94-015-9588-9}
 }
 
+@Article{         CARBONI1993145,
+  author        = {Aurelio Carboni and Stephen Lack and R.F.C. Walters},
+  doi           = {https://doi.org/10.1016/0022-4049(93)90035-R},
+  issn          = {0022-4049},
+  journal       = {Journal of Pure and Applied Algebra},
+  number        = {2},
+  pages         = {145-158},
+  title         = {Introduction to extensive and distributive categories},
+  url           = {https://www.sciencedirect.com/science/article/pii/002240499390035R},
+  volume        = {84},
+  year          = {1993},
+  bdsk-url-1    = {https://www.sciencedirect.com/science/article/pii/002240499390035R},
+  bdsk-url-2    = {https://doi.org/10.1016/0022-4049(93)90035-R}
+}
+
 @Article{         carneiro2015arithmetic,
   title         = {Arithmetic in Metamath, Case Study: Bertrand's Postulate},
   author        = {Carneiro, Mario},
