doc(citation.md): Add a citation.md file (#17202)
Creating a PR as suggested [here](https://leanprover.zulipchat.com/#narrow/stream/113488-general/topic/Citing.20lean.20.2B.20mathlib/near/306109993). Feel free to suggest or directly commit changes to the wording.

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -574,6 +574,19 @@
   mrreviewer    = {Jacques Velu}
 }
 
+@InProceedings{   demoura2015lean,
+  author        = {de Moura, Leonardo and Kong, Soonho and Avigad, Jeremy and
+                  van Doorn, Floris and von Raumer, Jakob},
+  editor        = {Felty, Amy P. and Middeldorp, Aart},
+  title         = {The Lean Theorem Prover (System Description)},
+  booktitle     = {Automated Deduction - CADE-25},
+  year          = {2015},
+  publisher     = {Springer International Publishing},
+  address       = {Cham},
+  pages         = {378--388},
+  isbn          = {978-3-319-21401-6}
+}
+
 @Article{         dold1958,
   author        = {Dold, Albrecht},
   title         = {Homology of symmetric products and other functors of
@@ -1379,7 +1392,25 @@
   author        = {Markowsky, George},
   year          = {1976},
   month         = {Dec},
-  pages         = {53–68}
+  pages         = {53-68}
+}
+
+@InProceedings{   mathlib2020,
+  author        = {The mathlib Community},
+  title         = {The Lean Mathematical Library},
+  year          = {2020},
+  isbn          = {9781450370974},
+  publisher     = {Association for Computing Machinery},
+  address       = {New York, NY, USA},
+  url           = {https://doi.org/10.1145/3372885.3373824},
+  doi           = {10.1145/3372885.3373824},
+  booktitle     = {Proceedings of the 9th ACM SIGPLAN International
+                  Conference on Certified Programs and Proofs},
+  pages         = {367-381},
+  numpages      = {15},
+  keywords      = {formal proof, formal library, Lean, mathlib},
+  location      = {New Orleans, LA, USA},
+  series        = {CPP 2020}
 }
 
 @InProceedings{   mcbride1996,
