--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1603,6 +1603,19 @@
   url           = {https://doi.org/10.1103/PhysicsPhysiqueFizika.1.195}
 }
 
+@Book{            MR915338,
+    author      = {Bell, J. S.},
+     title      = {Speakable and unspeakable in quantum mechanics},
+      note      = {Collected papers on quantum philosophy},
+ publisher      = {Cambridge University Press, Cambridge},
+      year      = {1987},
+     pages      = {xii+212},
+      isbn      = {0-521-33495-0},
+   mrclass      = {81B05 (00A25 01A75 81-06)},
+  mrnumber      = {915338},
+mrreviewer      = {F. Berdjis},
+}
+
 @Article{         MR399081,
   author        = {Hiblot, Jean-Jacques},
   title         = {Des anneaux euclidiens dont le plus petit algorithme n'est
