--- a/docs/references.bib
+++ b/docs/references.bib
@@ -8,6 +8,19 @@
 
 # To link to an entry in `references.bib`, use the following formats:
 #   [Author, *Title* (optional location)][bibkey]
+@InProceedings{   adhesive2004,
+  author        = {S. Lack and P. Soboci{\'n}ski},
+  title         = {Adhesive categories},
+  booktitle     = {Foundations of Software Science and Computation
+                  Structures, {FoSSaCS '04}},
+  series        = {LNCS},
+  volume        = {2987},
+  pages         = {273--288},
+  publisher     = {Springer},
+  year          = {2004},
+  url           = {https://www.ioc.ee/~pawel/papers/adhesive.pdf}
+}
+
 @Article{         ahrens2017,
   author        = {Benedikt Ahrens and Peter LeFanu Lumsdaine},
   year          = {2019},
