--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1724,6 +1724,12 @@
   url           = {http://www.math.jhu.edu/~eriehl/context.pdf}
 }
 
+@Misc{            RisingSea,
+  author        = "Vakil, Ravi",
+  title         = "{The Rising Sea: Foundations Of Algebraic Geometry Notes}",
+  url           = "https://math.stanford.edu/\textasciitilde vakil/216blog/"
+}
+
 @Book{            rudin2006real,
   title         = {Real and Complex Analysis},
   author        = {Rudin, Walter},
