--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1727,7 +1727,7 @@
 @Misc{            RisingSea,
   author        = "Vakil, Ravi",
   title         = "{The Rising Sea: Foundations Of Algebraic Geometry Notes}",
-  url           = "https://math.stanford.edu/\textasciitilde vakil/216blog/"
+  url           = "https://math.stanford.edu/~vakil/216blog/"
 }
 
 @Book{            rudin2006real,
