feat(measure_theory/covering/liminf_limsup): add lemma about limsup of thickenings of sequences of compact sets

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -483,6 +483,22 @@
   mrclass       = {00.04 (10.00)}
 }
 
+@Article{         cassels1950,
+  author        = {Cassels, J. W. S.},
+  title         = {Some metrical theorems in {D}iophantine approximation. {I}},
+  journal       = {Proc. Cambridge Philos. Soc.},
+  fjournal      = {Proceedings of the Cambridge Philosophical Society},
+  volume        = {46},
+  year          = {1950},
+  pages         = {209--218},
+  issn          = {0008-1981},
+  mrclass       = {10.0X},
+  mrnumber      = {36787},
+  mrreviewer    = {P. Erd\H{o}s},
+  doi           = {10.1017/s0305004100025676},
+  url           = {https://doi.org/10.1017/s0305004100025676},
+}
+
 @InProceedings{   Chou1994,
   author        = {Chou, Ching-Tsun},
   booktitle     = {Higher Order Logic Theorem Proving and Its Applications},
