--- a/docs/references.bib
+++ b/docs/references.bib
@@ -224,6 +224,15 @@
   url           = {https://doi.org/10.2307/1968871}
 }
 
+@Book{            bollobas1986,
+  author        = {Bollob\'{a}s, B\'{e}la},
+  title         = {Combinatorics: Set Systems, Hypergraphs, Families of Vectors, and Combinatorial
+                   Probability},
+  year          = {1986},
+  isbn          = {0521330599},
+  publisher     = {Cambridge University Press}
+}
+
 @Book{            borceux-vol1,
   title         = {Handbook of Categorical Algebra: Volume 1, Basic Category
                   Theory},
